--- a/module3-solution/css/index.html
+++ b/module3-solution/css/index.html
@@ -35,11 +35,11 @@
                 <br class="hidden-xs"> Breakfast</a>
             </li>
             <li>
-              <a href="#">
+              <a href="#lunch">
                <br class="hidden-xs"> Lunch</a>
             </li>
             <li>
-              <a href="#">
+              <a href="#dinner">
                 <br class="hidden-xs"> Dinner</a>
             </li>
             
@@ -58,6 +58,26 @@
           <p>akds aisdhfaiurhgar aiuhdfgpiuahr aiufhgoadfigr8hae gahdfpgah aoifga riahfgihadrigh arhigjaoidfga aoidhfgahdgi aifdhgadfoihga aodighjdfghpadfpgh aoifgaodfhig ahfgairh ahfijaijf aoihjfdajf aiofdjapodfhg </p>
 
         </section>
+      </div>
+
+      <div class="col-md-12 col-sm-12 col-xs-12" id="p1">
+        <section>
+          <div id="lunch">Lunch</div>
+          <p>akds aisdhfaiurhgar aiuhdfgpiuahr aiufhgoadfigr8hae gahdfpgah aoifga riahfgihadrigh arhigjaoidfga aoidhfgahdgi aifdhgadfoihga aodighjdfghpadfpgh aoifgaodfhig ahfgairh ahfijaijf aoihjfdajf aiofdjapodfhg </p>
+
+        </section>
+      </div>
+
+      <div class="col-md-12 col-sm-12 col-xs-12" id="p1">
+        <section>
+          <div id="dinner">Dinner</div>
+          <p>akds aisdhfaiurhgar aiuhdfgpiuahr aiufhgoadfigr8hae gahdfpgah aoifga riahfgihadrigh arhigjaoidfga aoidhfgahdgi aifdhgadfoihga aodighjdfghpadfpgh aoifgaodfhig ahfgairh ahfijaijf aoihjfdajf aiofdjapodfhg </p>
+
+        </section>
+      </div>
+    </div>
+
+
 
   
   
