--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -9,5 +9,8 @@
 </head>
 <body>
   <h1>Module 4 Solution</h1>
+  <div> 
+  	<p> Please right click on page, click on inspect, then console.</p>
+  </div>
 </body>
 </html>
